# WebStress

./: .gitignore  EXPERIMENT_LOG.md  README.md  agent_llm.py  judge.py  judge_llm.py  llm_client.py  llm_wrappers.py  orchestrator.py  proposer.py  proposer_llm.py  pyproject.toml  replay.py  requirements-optional.txt  run.sh  simulator_core.py  simulator_llm.py  simulator_prompt_features.py  validation.py  viewer_streamlit.py
.claude/: settings.json
LLMOS/: README.md  llm_client.py  run.sh  viewer_streamlit.py
docs/: DEVELOPER_GUIDE.md
instructions/: open-settings.json
llmos/: cli.py  collect.py  main.py  simulator.py
prompts/: agent.system.txt  compiler.system.txt  judge.system.txt  proposer.system.txt  pure_simulator.system.txt  simulator.runtime.txt  simulator.system.txt  simulator_features.example.json
schema/: action.json  instruction.json
scripts/: .debug_lms_compare_course_grades.json  .debug_lms_complete_prerequisite_module.json  .debug_lms_drop_course.json  .debug_lms_mark_all_announcements_read.json  .debug_lms_post_in_discussion.json  .debug_lms_submit_assignment.json  .debug_pp_refill_prescription.json  .debug_pp_update_phone.json  DEBUG_PROCEDURE.md  RH_DEBUG_PROCEDURE.md  _sweep_common.sh  audit_instruction_eval_alignment.py  canonical_diff_equivalence.py  compare_evals.py  debug.py  debug_send_message.py  degradation_report.py  gen_picks.py  generate_bu_demo_data.py  generate_gmail_templates.py  human-record.sh  phase2_3_test.py  pixel_aggregate.py  pixel_run_picks.py  rh_debug.py  run_environment_tests.py  run_eval_hard_50steps.sh  (+14 more)
(+2705 files in other folders)
