[project]
name = "webstress-workspace"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.39.0",
    "browsergym-core>=0.14.3",
    "fastapi>=0.100.0",
    "google-genai>=1.37.0",
    "httpx>=0.28.0",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
browser-use = [
    "browser-use>=0.12.6; python_version >= '3.11'",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
